[package]
name = "rust-api-example"
version = "0.1.0"
edition = "2021"
authors = ["Divit"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
#zstd-sys = "1.6.3+zstd.1.5.2"
#zstd = "0.10.0+zstd.1.5.2"
#zstd-safe = "4.1.4+zstd.1.5.2"